# data_uri_parser

./: LICENSE  README.md  pyproject.toml
.circleci/: check_version.sh  config.yml
.github/: dependabot.yml
data_uri_parser/: __init__.py
tests/: test_data_uri_parser.py
