[tool.poetry]
name = "data-uri-parser"
version = "0.1.1"
readme = "README.md"
license = "MIT"
description = "A Pythonic data uri parser"
homepage = "https://github.com/unmadeworks/data_uri_parser/"
authors = ["Unmade <backend@unmade.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
